fix collapse line ie

--- a/less/ui/accordions.less
+++ b/less/ui/accordions.less
@@ -4,6 +4,12 @@
 .panel-group .panel {
 	box-shadow: none;
 }
+.panel-group {
+	a: focus {
+		border: 0 !important;
+	}
+}
+
 .panel-group .panel-heading {
 	padding: 10px 0;
 }
